--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,8 +2,8 @@
 import Layout from '../layouts/Layout.astro';
 ---
 
-<Layout title="Manage Band">
-	<main class="flex h-screen w-screen justify-center items-center text-white">
-		Here will be the Manage Band landing page.
-	</main>
+<Layout title='Manage Band'>
+  <main class='flex h-screen w-screen justify-center items-center text-white'>
+    Here will be the Manage Band landing page.
+  </main>
 </Layout>
