--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,64 +1,53 @@
 ---
-interface Props {
-  title: string;
-}
-
-const { title } = Astro.props;
+import '@/styles/global.css';
+const { generator, site } = Astro;
+const description =
+  'Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in dui mauris. Vivamus hendrerit arcu sed erat molestie vehicula. Sed auctor neque eu tellus rhoncus ut eleifend nibh porttitor. Nullam in dui mauris. Vivamus hendrerit arcu sed erat molestie vehicula. Sed auctor neque eu tellus rhoncus ut eleifend nibh porttitor.';
 ---
 
 <!doctype html>
 <html lang='en'>
   <head>
     <meta charset='UTF-8' />
-    <meta
-      name='description'
-      content='Astro description'
-    />
-    <meta
-      name='viewport'
-      content='width=device-width'
-    />
-    <link
-      rel='icon'
-      type='image/svg+xml'
-      href='/favicon.svg'
-    />
-    <meta
-      name='generator'
-      content={Astro.generator}
-    />
-    <title>{title}</title>
+    <meta name='viewport' content='width=device-width' />
+    <link rel='icon' type='image/svg+xml' href='/favicon.svg' />
+    <meta name='generator' content={generator} />
+
+    <title>Manage.Band</title>
+    <meta name='description' content={description} />
+
+    <!-- social media -->
+    <meta property='og:title' content='Manage.Band' />
+    <meta property='og:type' content='website' />
+    <meta property='og:url' content={site} />
+
+    <!-- initialize theme -->
+    <script is:inline>
+      const themeSaved = localStorage.getItem('theme');
+
+      if (themeSaved) {
+        document.documentElement.dataset.theme = themeSaved;
+      } else {
+        const prefersDark = window.matchMedia(
+          '(prefers-color-scheme: dark)',
+        ).matches;
+        document.documentElement.dataset.theme = prefersDark ? 'dark' : 'light';
+      }
+
+      window
+        .matchMedia('(prefers-color-scheme: dark)')
+        .addEventListener('change', (event) => {
+          if (!localStorage.getItem('theme')) {
+            document.documentElement.dataset.theme = event.matches
+              ? 'dark'
+              : 'light';
+          }
+        });
+    </script>
   </head>
-  <body>
+  <body
+    class='h-full overflow-x-hidden bg-yellow-900 text-yellow-300 selection:bg-black selection:text-white'
+  >
     <slot />
   </body>
 </html>
-<style is:global>
-  :root {
-    --accent: 136, 58, 234;
-    --accent-light: 224, 204, 250;
-    --accent-dark: 49, 10, 101;
-    --accent-gradient: linear-gradient(
-      45deg,
-      rgb(var(--accent)),
-      rgb(var(--accent-light)) 30%,
-      white 60%
-    );
-  }
-  html {
-    font-family: system-ui, sans-serif;
-    background: #13151a;
-    background-size: 224px;
-  }
-  code {
-    font-family:
-      Menlo,
-      Monaco,
-      Lucida Console,
-      Liberation Mono,
-      DejaVu Sans Mono,
-      Bitstream Vera Sans Mono,
-      Courier New,
-      monospace;
-  }
-</style>
