--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -45,9 +45,7 @@ const description =
         });
     </script>
   </head>
-  <body
-    class='h-full overflow-x-hidden bg-yellow-900 text-yellow-300 selection:bg-black selection:text-white'
-  >
+  <body class='h-full overflow-x-hidden bg-background text-white'>
     <slot />
   </body>
 </html>
