--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -1,11 +1,10 @@
 ---
 import type { NavItem } from '@/types';
-import Icon from 'favicon.svg';
 
 const navItems: Array<NavItem> = [
-  { title: 'Features', url: '#features' },
-  { title: 'For who', url: '#for-who' },
-  { title: 'About us', url: '#about-us' },
+  { title: 'Funkcjonalności', url: '#features' },
+  { title: 'Dla kogo', url: '#for-who' },
+  { title: 'O nas', url: '#about-us' },
 ];
 ---
 
