--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,10 @@
 ---
+import Splash from '@/components/splash.astro';
 import Layout from '../layouts/Layout.astro';
 import Header from '@/components/header.astro';
 ---
 
 <Layout>
   <Header />
+  <Splash />
 </Layout>
