--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -10,7 +10,7 @@ const navItems: Array<NavItem> = [
 
 <header
   id='page-header'
-  class='absolute top-0 z-20 flex w-full justify-center border-b border-transparent px-8 py-8 text-white'
+  class='fixed top-0 z-20 flex w-full justify-center border-b border-transparent px-8 py-8 text-white bg-background/80 backdrop-blur-sm backdrop-filter'
 >
   <div class='container flex justify-between items-center h-[32px]'>
     <a class='flex items-center gap-4' href='#'>
