:art: improved structure of

--- a/src/components/tile.astro
+++ b/src/components/tile.astro
@@ -1,19 +1,16 @@
 ---
-export type Props = {
+import type { GoalType } from '@/types';
+export type Props = GoalType & {
   id: string;
-  title: string;
-  background?: string;
-  className?: string;
-  img?: string;
 };
-const { id, title, background, className, img } = Astro.props;
+const { id, title, background, styling, img } = Astro.props;
 ---
 
 <div
   id={id}
   class={`border rounded-3xl border-transparent px-12 py-8 ${
     background ?? 'bg-darkBackground'
-  }${className ? ` ${className}` : ''}`}
+  }${styling ? ` ${styling}` : ''}`}
 >
   {img && <img src={img} class='w-12 h-12 mb-4' />}
   <h2 class='text-2xl font-bold text-white mb-4'>{title}</h2>
