--- a/src/components/content-section.astro
+++ b/src/components/content-section.astro
@@ -7,11 +7,8 @@ export type Props = {
 const { title, id } = Astro.props;
 ---
 
-<section
-  id={id}
-  class='flex scroll-mt-24 flex-col items-center gap-4 space-y-8'
->
-  <div class='container'>
+<section id={id} class='flex scroll-mt-24 flex-col items-center'>
+  <div class='container space-y-16'>
     <div class='flex flex-col items-center gap-4 container'>
       {
         title && (
