--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,14 +1,14 @@
 ---
-import Splash from '@/components/splash.astro';
+import Hero from '@/components/hero.astro';
 import Layout from '../layouts/Layout.astro';
 import Header from '@/components/header.astro';
-import Intro from '@/components/intro.astro';
+import Features from '@/components/features.astro';
 ---
 
 <Layout>
   <Header />
-  <Splash />
+  <Hero />
   <div class='space-y-24 px-8 py-32'>
-    <Intro />
+    <Features />
   </div>
 </Layout>
