:art: prettier/tailwind classes order

--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -10,13 +10,13 @@ const navItems: Array<NavItem> = [
 
 <header
   id='page-header'
-  class='fixed top-0 z-20 flex w-full justify-center border-b border-transparent px-8 py-8 text-white bg-background/80 backdrop-blur-sm backdrop-filter'
+  class='fixed top-0 z-20 flex w-full justify-center border-b border-transparent bg-background/80 px-8 py-8 text-white backdrop-blur-sm backdrop-filter'
 >
-  <div class='container flex justify-between items-center h-[32px]'>
+  <div class='container flex h-[32px] items-center justify-between'>
     <a class='flex items-center gap-4' href='#'>
       <h1 class='sr-only'>Manage.Band</h1>
       <img src='favicon.png' alt='Manage.Band' height='24px' width='24px' />
-      <h1 class='text-2xl font-semibold hidden sm:block'>
+      <h1 class='hidden text-2xl font-semibold sm:block'>
         <span>Manage.</span><span class='text-brandRed'>Band</span>
       </h1>
     </a>
