--- a/src/components/hero-background.astro
+++ b/src/components/hero-background.astro
@@ -3,4 +3,4 @@ const widths = [450, 800, 1200];
 const sizes = '100vw';
 ---
 
-<div class='h-full w-full object-cover bg-background'></div>
+<div class='h-full w-full bg-background object-cover'></div>
