--- a/src/components/content-section.astro
+++ b/src/components/content-section.astro
@@ -9,16 +9,16 @@ const { title, id } = Astro.props;
 
 <section id={id} class='flex scroll-mt-24 flex-col items-center'>
   <div class='container space-y-16'>
-    <div class='flex flex-col items-center gap-4 container'>
+    <div class='container flex flex-col items-center gap-4'>
       {
         title && (
-          <h2 class='text-center font-extrabold tracking-tight text-6xl'>
+          <h2 class='text-center text-6xl font-extrabold tracking-tight'>
             {title}
           </h2>
         )
       }
     </div>
-    <p class='max-w-xl text-center font-extrabold text-2xl container'>
+    <p class='container max-w-xl text-center text-2xl font-extrabold'>
       <slot name='lead' />
     </p>
   </div>
