:sparkles: content-section header

--- a/src/components/features.astro
+++ b/src/components/features.astro
@@ -4,7 +4,11 @@ import Tile from './tile.astro';
 import { goals } from '@/content/_goals';
 ---
 
-<ContentSection id='features' title='Funkcjonalności'>
+<ContentSection
+  id='features'
+  title='Funkcjonalności'
+  description='Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae diam eget risus varius blandit sit amet non magna. Sed vitae diam eget risus varius blandit sit amet non magna.'
+>
   <Fragment slot='lead'>
     <div class='grid grid-cols-1 gap-4 lg:grid-cols-3 lg:gap-8'>
       {
