--- a/src/components/content-section.astro
+++ b/src/components/content-section.astro
@@ -1,22 +1,18 @@
 ---
+import ContentHeader from './content-header.astro';
 export type Props = {
   id: string;
   title: string;
+  description?: string;
 };
 
-const { title, id } = Astro.props;
+const { id, title, description } = Astro.props;
 ---
 
 <section id={id} class='flex scroll-mt-24 flex-col items-center'>
   <div class='container space-y-16'>
     <div class='container flex flex-col items-center gap-4'>
-      {
-        title && (
-          <h2 class='text-center text-6xl font-extrabold tracking-tight'>
-            {title}
-          </h2>
-        )
-      }
+      {title && <ContentHeader title={title} description={description} />}
     </div>
     <p class='container max-w-xl text-center text-2xl font-extrabold'>
       <slot name='lead' />
