--- a/src/components/content-section.astro
+++ b/src/components/content-section.astro
@@ -4,9 +4,10 @@ export type Props = {
   id: string;
   title: string;
   description?: string;
+  afterword?: string;
 };
 
-const { id, title, description } = Astro.props;
+const { id, title, description, afterword } = Astro.props;
 ---
 
 <section id={id} class='flex scroll-mt-24 flex-col items-center'>
@@ -17,5 +18,10 @@ const { id, title, description } = Astro.props;
     <p class='container max-w-xl text-center text-2xl font-extrabold'>
       <slot name='lead' />
     </p>
+    {
+      afterword && (
+        <p class='text-md container max-w-xl text-center'>{afterword}</p>
+      )
+    }
   </div>
 </section>
