--- a/src/components/features.astro
+++ b/src/components/features.astro
@@ -7,10 +7,11 @@ import { goals } from '@/content/_goals';
 <ContentSection
   id='features'
   title='Funkcjonalności'
-  description='Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae diam eget risus varius blandit sit amet non magna. Sed vitae diam eget risus varius blandit sit amet non magna.'
+  description='Przygotowaliśmy dla Ciebie funkcjolności, które sprawią że zarządzanie karierą stanie się łatwiejsze a Ty będziesz mógł skupić się na tworzeniu.'
+  afterword='...i wiele innych!'
 >
   <Fragment slot='lead'>
-    <div class='grid grid-cols-1 gap-4 lg:grid-cols-3 lg:gap-8'>
+    <div class='grid grid-cols-1 gap-4 lg:grid-cols-3'>
       {
         goals.map((goal) => (
           <Tile id={`goal-${goal.title}`} {...goal}>
