--- a/src/components/features.astro
+++ b/src/components/features.astro
@@ -8,7 +8,6 @@ import { goals } from '@/content/_goals';
   id='features'
   title='Funkcjonalności'
   description='Przygotowaliśmy dla Ciebie funkcjolności, które sprawią że zarządzanie karierą stanie się łatwiejsze a Ty będziesz mógł skupić się na tworzeniu.'
-  afterword='...i wiele innych!'
 >
   <Fragment slot='lead'>
     <div class='grid grid-cols-1 gap-4 lg:grid-cols-3'>
@@ -22,5 +21,8 @@ import { goals } from '@/content/_goals';
         ))
       }
     </div>
+  </Fragment>
+  <Fragment slot='afterword'>
+    <p class='text-md text-center'>...i wiele innych!</p>
   </Fragment>
 </ContentSection>
