--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -17,7 +17,7 @@ const navItems: Array<NavItem> = [
       <h1 class='sr-only'>Manage.Band</h1>
       <img src='favicon.png' alt='Manage.Band' height='24px' width='24px' />
       <h1 class='hidden text-2xl font-semibold sm:block'>
-        <span>Manage.</span><span class='text-brandRed'>Band</span>
+        <span>Manage.</span><span class='text-brand'>Band</span>
       </h1>
     </a>
     <nav class='hidden sm:block' id='main-navigation'>
