--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,8 @@ import Hero from '@/components/hero.astro';
 import Layout from '../layouts/Layout.astro';
 import Header from '@/components/header.astro';
 import Features from '@/components/features.astro';
+import ForWho from '@/components/for-who.astro';
+import AboutUs from '@/components/about-us.astro';
 ---
 
 <Layout>
@@ -10,5 +12,7 @@ import Features from '@/components/features.astro';
   <Hero />
   <div class='space-y-24 px-8 py-32'>
     <Features />
+    <ForWho />
+    <AboutUs />
   </div>
 </Layout>
