--- a/src/components/hero-message.astro
+++ b/src/components/hero-message.astro
@@ -2,13 +2,13 @@
   <div class='space-y-8'>
     <h1 class='text-center text-6xl font-semibold'>SKUP SIĘ NA MUZYCE</h1>
     <h2 class='space-x-1 text-center text-xl'>
-      <span class='text-brandRed'>*</span>
+      <span class='text-brand'>*</span>
       <span>pomożemy z resztą</span>
-      <span class='text-brandRed'>*</span>
+      <span class='text-brand'>*</span>
     </h2>
     <div class='text-center'>
       <a href='#features'>
-        <button class='rounded-full border border-brandRed px-8 py-2'>
+        <button class='border-brand rounded-full border px-8 py-2'>
           Zobacz więcej
         </button>
       </a>
