--- a/src/components/features.astro
+++ b/src/components/features.astro
@@ -23,6 +23,6 @@ import { goals } from '@/content/_goals';
     </div>
   </Fragment>
   <Fragment slot='afterword'>
-    <p class='text-md text-center'>...i wiele innych!</p>
+    <p class='text-md text-center'>...i wiele innych 😏</p>
   </Fragment>
 </ContentSection>
