--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,7 @@ import Header from '@/components/header.astro';
 import Features from '@/components/features.astro';
 import ForWho from '@/components/for-who.astro';
 import AboutUs from '@/components/about-us.astro';
+import When from '@/components/when.astro';
 ---
 
 <Layout>
@@ -13,6 +14,7 @@ import AboutUs from '@/components/about-us.astro';
   <div class='space-y-24 px-8 py-32'>
     <Features />
     <ForWho />
+    <When />
     <AboutUs />
   </div>
 </Layout>
