:sparkles: added footer and social links

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,15 +6,17 @@ import Features from '@/components/features.astro';
 import ForWho from '@/components/for-who.astro';
 import AboutUs from '@/components/about-us.astro';
 import When from '@/components/when.astro';
+import Footer from '@/components/footer.astro';
 ---
 
 <Layout>
   <Header />
   <Hero />
-  <div class='space-y-24 px-8 py-32'>
+  <div class='space-y-24 px-8 py-24'>
     <Features />
     <ForWho />
     <When />
     <AboutUs />
   </div>
+  <Footer />
 </Layout>
