--- a/src/components/when.astro
+++ b/src/components/when.astro
@@ -13,7 +13,7 @@ import ContentSection from './content-section.astro';
       <p>
         Niebawem aplikacja pojawi się jako <strong>Open Source</strong> na
         naszym <a
-          class='hover:text-brand font-bold transition-colors duration-150'
+          class='from-brand to-brand-secondary bg-gradient-to-r bg-[length:100%_2px] bg-bottom bg-no-repeat transition-[background-size] hover:bg-[length:100%_100%]'
           href='https://github.com/manage-band'>Githubie</a
         >, zapraszamy wszystkich zainteresowanych - muzyków, programistów,
         testerów - do współpracy 😏
