--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -12,6 +12,7 @@ const description =
     <meta name='viewport' content='width=device-width' />
     <link rel='icon' type='image/svg+xml' href='/favicon.svg' />
     <meta name='generator' content={generator} />
+    <meta http-equiv="Content-Security-Policy" content="script-src 'none'">
 
     <title>Manage.Band</title>
     <meta name='description' content={description} />
