:lipstick: added background image for larger screens

--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -4,7 +4,7 @@ import HeroImage from '@/components/hero-image.astro';
 import HeroMessage from '@/components/hero-message.astro';
 ---
 
-<section class='relative grid min-h-full place-items-center bg-background px-8'>
+<section class='relative grid min-h-full place-items-center bg-background px-8 xl:bg-[url("bg.png")] xl:bg-cover xl:bg-no-repeat'>
   <div id='splash-bg-fallback' class='absolute inset-0 hidden opacity-40'>
     <HeroBackground />
   </div>
