:mag: seo improved

--- a/src/components/button.astro
+++ b/src/components/button.astro
@@ -9,7 +9,7 @@ const { href, label } = Astro.props;
 
 <a href={href}>
   <button
-    class='hover:bg-brand-tertiary bg-brand rounded-lg px-7 py-3 text-white transition-colors duration-100 ease-in-out'
+    class='hover:bg-brand-secondary bg-brand-tertiary rounded-lg px-7 py-3 text-white transition-colors duration-100 ease-in-out'
     >{label}</button
   >
 </a>
