:mag: seo + image fixes

--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -9,7 +9,7 @@ import Button from './button.astro';
   <div class='container flex h-[32px] items-center justify-between'>
     <a class='flex items-center gap-4' href='#'>
       <h1 class='sr-only'>Manage.Band</h1>
-      <img src='favicon.png' alt='Manage.Band' height='24px' width='24px' />
+      <img src='favicon.svg' alt='Manage.Band' height='24px' width='24px' />
       <h1 class='hidden text-2xl font-semibold sm:block'>
         <span>Manage.</span><span class='text-brand'>Band</span>
       </h1>
