--- a/src/components/when.astro
+++ b/src/components/when.astro
@@ -6,12 +6,11 @@ import ContentSection from './content-section.astro';
   <Fragment slot='afterword'>
     <div>
       <p>
-        Planujemy oddać aplikację do Waszych testów w <strong>2024 roku</strong
+        Planujemy oddać Wam aplikację do testów w <strong>2024 roku</strong
         >.
       </p>
-      <p>Dostępne będą wersja webowa jak i aplikacja mobilna.</p>
       <p>
-        Niebawem aplikacja pojawi się jako <strong>Open Source</strong> na
+        Niebawem pojawi się jako <strong>Open Source</strong> na
         naszym <a
           class='from-brand to-brand-secondary bg-gradient-to-r bg-[length:100%_2px] bg-bottom bg-no-repeat transition-[background-size] hover:bg-[length:100%_100%]'
           href='https://github.com/manage-band'>Githubie</a
