--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -4,14 +4,17 @@ import Button from './button.astro';
 
 <header
   id='page-header'
-  class='fixed top-0 z-20 flex w-full justify-center border-b border-transparent bg-background/80 px-8 py-8 text-white backdrop-blur-sm backdrop-filter'
+  class='fixed top-0 z-20 flex w-full justify-center border-b border-transparent bg-background/50 px-8 py-8 text-white backdrop-blur-sm backdrop-filter'
 >
   <div class='container flex h-[32px] items-center justify-between'>
     <a class='flex items-center gap-4' href='#'>
       <h1 class='sr-only'>Manage.Band</h1>
       <img src='favicon.svg' alt='Manage.Band' height='24px' width='24px' />
       <h1 class='hidden text-2xl font-semibold sm:block'>
-        <span>Manage.</span><span class='text-brand'>Band</span>
+        <span>Manage.</span><span
+          class='bg-gradient-to-r from-brand to-brand-secondary bg-clip-text text-transparent'
+          >Band</span
+        >
       </h1>
     </a>
     <Button href='#' label='Zapisz się' />
