--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -1,17 +1,18 @@
 ---
-import HeroBackground from './hero-background.astro';
 import HeroImage from '@/components/hero-image.astro';
 import HeroMessage from '@/components/hero-message.astro';
 ---
 
-<section class='relative grid min-h-full place-items-center bg-background px-8 bg-[url("/bg.png")] bg-cover xl:bg-no-repeat'>
-  <div id='splash-bg-fallback' class='absolute inset-0 hidden opacity-40'>
-    <HeroBackground />
+<section class='relative h-full bg-background'>
+  <div
+    id='bg-img'
+    class='absolute inset-0 bg-[url("/bg-mountains.png")] bg-cover bg-center bg-no-repeat opacity-30'
+  >
   </div>
-  <div class='absolute h-full max-w-full lg:relative'>
+  <div class='relative grid h-full place-items-center'>
     <div class='container grid h-full w-full place-items-center'>
       <div
-        class='mt-[97px] flex items-center justify-center lg:grid lg:h-[calc(100%-97px)] lg:grid-cols-2 lg:place-items-center lg:gap-16'
+        class='mt-[97px] flex items-center justify-center px-2 lg:grid lg:h-[calc(100%-97px)] lg:grid-cols-2 lg:place-items-center lg:gap-16 lg:px-8'
       >
         <HeroMessage />
         <HeroImage />
