:lipstick: adjust hero message font size

--- a/src/components/hero-message.astro
+++ b/src/components/hero-message.astro
@@ -4,7 +4,9 @@ import Button from './button.astro';
 
 <div class='grid place-items-center px-8 py-8 lg:px-16'>
   <div class='space-y-8'>
-    <h1 class='flex flex-col text-left text-7xl font-semibold'>
+    <h1
+      class='flex flex-col text-left text-5xl font-semibold sm:text-6xl md:text-7xl xl:text-8xl'
+    >
       <span>SKUP SIĘ</span><span
         >NA <span
           class='bg-gradient-to-r from-brand to-brand-secondary bg-clip-text text-transparent'
