--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,7 +2,7 @@
 import '@/styles/global.css';
 const { generator, site } = Astro;
 const description =
-  'Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in dui mauris. Vivamus hendrerit arcu sed erat molestie vehicula. Sed auctor neque eu tellus rhoncus ut eleifend nibh porttitor. Nullam in dui mauris. Vivamus hendrerit arcu sed erat molestie vehicula. Sed auctor neque eu tellus rhoncus ut eleifend nibh porttitor.';
+  'Manage.Band is an open-source and privacy-respecting platform for managing your band.';
 ---
 
 <!doctype html>
@@ -20,30 +20,8 @@ const description =
     <meta property='og:title' content='Manage.Band' />
     <meta property='og:type' content='website' />
     <meta property='og:url' content={site} />
-
-    <!-- initialize theme -->
-    <script is:inline>
-      const themeSaved = localStorage.getItem('theme');
-
-      if (themeSaved) {
-        document.documentElement.dataset.theme = themeSaved;
-      } else {
-        const prefersDark = window.matchMedia(
-          '(prefers-color-scheme: dark)',
-        ).matches;
-        document.documentElement.dataset.theme = prefersDark ? 'dark' : 'light';
-      }
-
-      window
-        .matchMedia('(prefers-color-scheme: dark)')
-        .addEventListener('change', (event) => {
-          if (!localStorage.getItem('theme')) {
-            document.documentElement.dataset.theme = event.matches
-              ? 'dark'
-              : 'light';
-          }
-        });
-    </script>
+    <meta property='og:image' content='/social.jpg' />
+    <meta property='og:description' content={description} />
   </head>
   <body class='h-full overflow-x-hidden bg-background text-white'>
     <slot />
