:lipstick: changed icons and hero background

--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -6,7 +6,7 @@ import HeroMessage from '@/components/hero-message.astro';
 <section class='relative h-full bg-background'>
   <div
     id='bg-img'
-    class='absolute inset-0 bg-[url("/bg-mountains.png")] bg-cover bg-center bg-no-repeat opacity-30'
+    class='absolute inset-0 bg-[url("/hero-background.png")] bg-cover bg-center bg-no-repeat opacity-30'
   >
   </div>
   <div class='relative grid h-full place-items-center'>
