--- a/src/components/hero-message.astro
+++ b/src/components/hero-message.astro
@@ -9,7 +9,7 @@ import Button from './button.astro';
     >
       <span>SKUP SIĘ</span><span
         >NA <span
-          class='bg-gradient-to-r from-brand to-brand-secondary bg-clip-text text-transparent'
+          class='bg-gradient-to-r from-brand to-brand-secondary bg-clip-text font-extrabold text-transparent'
           >MUZYCE</span
         ></span
       >
