--- a/src/components/for-who.astro
+++ b/src/components/for-who.astro
@@ -8,6 +8,8 @@ import ContentSection from './content-section.astro';
   description='Aplikacja manage.band będzie przydatna zarówno dla osób pracujących samodzielnie, które chcą uporządkować swoje pomysły i projekty, jak i dla zespołów, które potrzebują skutecznego narzędzia do śledzenia postępu prac oraz jasnego delegowania zadań.'
 >
   <Fragment slot='lead'>
-    <img src='mb-for-who.png' alt='Dla kogo?' />
+    <div class='grid place-items-center'>
+      <img src='mb-for-who.png' alt='Dla kogo?' width='1312px' height='598px' />
+    </div>
   </Fragment>
 </ContentSection>
