--- a/src/components/when.astro
+++ b/src/components/when.astro
@@ -4,15 +4,13 @@ import ContentSection from './content-section.astro';
 
 <ContentSection title='Kiedy? Co? Jak?' id='when'>
   <Fragment slot='afterword'>
-    <div>
+    <div class='text-text-muted'>
       <p>
-        Planujemy oddać Wam aplikację do testów w <strong>2024 roku</strong
-        >.
+        Planujemy oddać Wam aplikację do testów w <strong>2024 roku</strong>.
       </p>
       <p>
-        Niebawem pojawi się jako <strong>Open Source</strong> na
-        naszym <a
-          class='from-brand to-brand-secondary bg-gradient-to-r bg-[length:100%_2px] bg-bottom bg-no-repeat transition-[background-size] hover:bg-[length:100%_100%]'
+        Niebawem pojawi się jako <strong>Open Source</strong> na naszym <a
+          class='bg-gradient-to-r from-brand to-brand-secondary bg-[length:100%_2px] bg-bottom bg-no-repeat transition-[background-size] hover:bg-[length:100%_100%]'
           href='https://github.com/manage-band'>Githubie</a
         >, zapraszamy wszystkich zainteresowanych - muzyków, programistów,
         testerów - do współpracy 😏
