--- a/src/components/hero-message.astro
+++ b/src/components/hero-message.astro
@@ -5,7 +5,7 @@ import Button from './button.astro';
 <div class='grid place-items-center px-8 py-8 lg:px-16'>
   <div class='space-y-8'>
     <h1
-      class='flex flex-col text-left text-5xl font-semibold sm:text-6xl md:text-7xl xl:text-8xl'
+      class='flex flex-col text-left text-5xl sm:text-6xl md:text-7xl xl:text-8xl'
     >
       <span>SKUP SIĘ</span><span
         >NA <span
