--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,6 @@
+@import '@fontsource/inter';
+@import '@fontsource/kanit';
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -5,6 +8,13 @@
 @layer base {
   * {
     @apply bg-[var(--background)] text-[var(--text)];
-    font-family: 'Montserrat', sans-serif;
+  }
+
+  h1 {
+    font-family: 'Kanit'
+  }
+
+  body {
+    font-family: 'Inter', 'Arial'
   }
 }
