--- a/src/components/content-section.astro
+++ b/src/components/content-section.astro
@@ -4,13 +4,25 @@ export type Props = {
   id: string;
   title: string;
   description?: string;
+  backgroundImage?: string;
 };
 
-const { id, title, description } = Astro.props;
+const { id, title, description, backgroundImage } = Astro.props;
 ---
 
-<section id={id} class='flex scroll-mt-24 flex-col items-center'>
-  <div class='container space-y-8'>
+<section id={id} class='relative h-full scroll-mt-24'>
+  {
+    backgroundImage && (
+      <div
+        id='bg-imgasdasd'
+        style={{
+          '--image-url': `url("${backgroundImage}")`,
+        }}
+        class={`absolute inset-0 bg-[image:var(--image-url)] bg-contain bg-center bg-no-repeat`}
+      />
+    )
+  }
+  <div class='relative space-y-8'>
     <div class='container flex flex-col items-center gap-4'>
       {title && <ContentHeader title={title} description={description} />}
     </div>
