--- a/src/components/content-header.astro
+++ b/src/components/content-header.astro
@@ -8,11 +8,9 @@ const { title, description } = Astro.props;
 ---
 
 <div class='w-full space-y-8 md:w-2/3'>
-  <h1
-    class='text-center text-2xl font-extrabold tracking-tight md:text-4xl lg:text-6xl'
-  >
+  <h2 class='text-center text-2xl font-extrabold md:text-4xl lg:text-5xl'>
     {title}
-  </h1>
+  </h2>
   {
     description && (
       <p class='text-md px-8 text-center text-text-muted'>{description}</p>
