--- a/src/components/hero-message.astro
+++ b/src/components/hero-message.astro
@@ -2,21 +2,19 @@
 import Button from './button.astro';
 ---
 
-<div class='grid place-items-center px-8 py-8 lg:px-16'>
+<div class='grid py-8'>
   <div class='space-y-8'>
-    <h1
-      class='flex flex-col text-left text-5xl sm:text-6xl md:text-7xl xl:text-8xl'
-    >
-      <span>SKUP SIĘ</span><span
-        >NA <span
-          class='bg-gradient-to-r from-brand to-brand-secondary bg-clip-text font-extrabold text-transparent'
-          >MUZYCE</span
-        ></span
+    <h1 class='flex flex-col text-left text-text-muted'>
+      <span>SKUP SIĘ NA</span>
+      <span
+        class='bg-gradient-to-r from-brand to-brand-secondary bg-clip-text font-extrabold text-transparent'
       >
+        MUZYCE
+      </span>
     </h1>
-    <h2 class='space-x-1 text-left text-xl'>
+    <h2 class='space-x-1 text-left text-2xl md:text-4xl'>
       <span class='text-brand'>*</span>
-      <span>pomożemy z resztą</span>
+      <span class='font-extralight'>pomożemy z resztą</span>
       <span class='text-brand'>*</span>
     </h2>
     <div class='text-left'>
