--- a/src/components/tile.astro
+++ b/src/components/tile.astro
@@ -3,16 +3,28 @@ import type { Goal } from '@/types';
 export type Props = Goal & {
   id: string;
 };
-const { id, title, background, styling, img } = Astro.props;
+const { id, title, background, styling, img, backgroundImage } = Astro.props;
 ---
 
 <div
   id={id}
-  class={`border rounded-3xl border-transparent px-12 py-8 ${
+  class={`border rounded-3xl border-transparent py-8 ${
     background ?? 'bg-background-dark'
-  }${styling ? ` ${styling}` : ''}`}
+  }${styling ? ` ${styling}` : ''}${
+    backgroundImage ? ' grid md:grid-cols-2' : ' px-12'
+  }
+  `}
 >
-  {img && <img src={img} alt={title} class='mb-4 h-12 w-12' />}
-  <h2 class='mb-4 text-2xl font-bold text-white'>{title}</h2>
-  <slot name='content' />
+  <div class=`${backgroundImage ? 'px-12' : ''}`>
+    {img && <img src={img} alt={title} class='mb-4 h-16 w-16' />}
+    <h2 class='mb-4 text-4xl font-bold text-white'>{title}</h2>
+    <slot name='content' />
+  </div>
+  {
+    backgroundImage && (
+      <div class='-m-[1px] hidden md:flex md:justify-end'>
+        <img src={backgroundImage} alt={title} class='inset-0 right-0' />
+      </div>
+    )
+  }
 </div>
