--- a/src/components/features.astro
+++ b/src/components/features.astro
@@ -7,7 +7,7 @@ import { goals } from '@/content/_goals';
 <ContentSection
   id='features'
   title='Co możemy dla Ciebie zrobić?'
-  description='Przygotowaliśmy dla Ciebie funkcjolności, które sprawią że zarządzanie karierą stanie się łatwiejsze a Ty będziesz mógł skupić się na tworzeniu.'
+  description='Przygotowujemy dla Ciebie funkcjolności, które sprawią że zarządzanie karierą stanie się łatwiejsze a Ty będziesz mógł skupić się na tworzeniu.'
 >
   <Fragment slot='lead'>
     <div class='grid grid-cols-1 gap-4 lg:grid-cols-3'>
