--- a/src/components/content-header.astro
+++ b/src/components/content-header.astro
@@ -8,7 +8,7 @@ const { title, description } = Astro.props;
 ---
 
 <div class='w-full space-y-8 md:w-2/3'>
-  <h2 class='text-center text-2xl font-extrabold md:text-4xl lg:text-5xl'>
+  <h2 class='text-center'>
     {title}
   </h2>
   {
