--- a/src/components/tile.astro
+++ b/src/components/tile.astro
@@ -17,7 +17,7 @@ const { id, title, background, styling, img, backgroundImage } = Astro.props;
 >
   <div class=`${backgroundImage ? 'px-12' : ''}`>
     {img && <img src={img} alt={title} class='mb-4 h-16 w-16' />}
-    <h2 class='mb-4 text-4xl font-bold text-white'>{title}</h2>
+    <h2 class='mb-4 text-white'>{title}</h2>
     <slot name='content' />
   </div>
   {
