--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -1,10 +1,27 @@
 ---
+import ManageBand from './manage-band.astro';
 import SocialLink from './social-link.astro';
+import Button from './button.astro';
 ---
 
-<footer class='bg-background-dark w-full border-t border-transparent'>
-  <div class='container grid place-items-center py-8'>
+<footer class='w-full border-t border-transparent bg-background-dark p-8'>
+  <div class='container flex items-center justify-between'>
+    <div>
+      <a class='flex items-center gap-4' href='#'>
+        <h2 class='sr-only'>Manage.Band</h2>
+        <img src='favicon.svg' alt='Manage.Band' height='24px' width='24px' />
+        <h2 class='hidden text-2xl font-black sm:block'>
+          <ManageBand />
+        </h2>
+      </a>
+    </div>
     <div class='flex space-x-8'>
+      <Button
+        styling='hidden lg:block'
+        href='#'
+        label='Zapisz się na newsletter'
+        variant='outline'
+      />
       <SocialLink social='github' href='https://github.com/manage-band' />
       <SocialLink social='instagram' href='https://instagram.com/manage.band' />
     </div>
