--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -5,7 +5,7 @@ import ManageBand from './manage-band.astro';
 
 <header
   id='page-header'
-  class='fixed top-0 z-20 flex w-full justify-center border-b border-transparent bg-background/30 px-8 py-8 text-white backdrop-blur-sm backdrop-filter'
+  class='fixed top-0 z-20 flex w-full justify-center border-b border-transparent bg-background/30 p-8 text-white backdrop-blur-sm backdrop-filter'
 >
   <div class='container flex h-[32px] items-center justify-between'>
     <a class='flex items-center gap-4' href='#'>
