--- a/src/components/about-us.astro
+++ b/src/components/about-us.astro
@@ -1,5 +1,4 @@
 ---
-import ContentSection from './content-section.astro';
 import { About } from '@/content/_about';
 ---
 
@@ -7,7 +6,7 @@ import { About } from '@/content/_about';
   <div class='lg:grid lg:grid-cols-2'>
     <div class='space-y-4'>
       <h2>O nas</h2>
-      <section class='text-md space-y-4 text-text-muted'>
+      <section class='text-md space-y-4'>
         {
           About.map((paragraph, idx) => (
             <p
