:lipstick: styling fixes

--- a/src/components/about-us.astro
+++ b/src/components/about-us.astro
@@ -3,7 +3,7 @@ import { About } from '@/content/_about';
 ---
 
 <section id='about-us' class='container relative h-full scroll-mt-24'>
-  <div class='lg:grid lg:grid-cols-2'>
+  <div class='gap-16 lg:grid lg:grid-cols-2'>
     <div class='space-y-4'>
       <h2>O nas</h2>
       <section class='text-md space-y-4'>
