--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -19,7 +19,7 @@ import Button from './button.astro';
       <Button
         styling='hidden lg:block'
         href='#'
-        label='Zapisz się na newsletter'
+        label='Poznajmy się'
         variant='outline'
       />
       <SocialLink social='github' href='https://github.com/manage-band' />
