--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -15,6 +15,6 @@ import ManageBand from './manage-band.astro';
         <ManageBand />
       </h2>
     </a>
-    <Button href='#' label='Zapisz się' variant='outline' />
+    <Button href='#' label='Poznajmy się' variant='outline' />
   </div>
 </header>
