--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -3,7 +3,7 @@ import HeroImage from '@/components/hero-image.astro';
 import HeroMessage from '@/components/hero-message.astro';
 ---
 
-<section class='relative h-full bg-background'>
+<section class='relative h-full min-h-[800px] bg-background'>
   <div
     id='bg-img'
     class='absolute inset-0 bg-[url("/hero-background.png")] bg-cover bg-center bg-no-repeat opacity-50'
