--- a/src/components/hero-message.astro
+++ b/src/components/hero-message.astro
@@ -5,12 +5,15 @@ import Button from './button.astro';
 <div class='grid py-8'>
   <div class='space-y-8'>
     <h1 class='flex flex-col text-left text-text-muted'>
-      <span>SKUP SIĘ NA</span>
+      <span>SKUP SIĘ</span>
       <span
-        class='bg-gradient-to-r from-brand to-brand-secondary bg-clip-text font-extrabold text-transparent'
+        >NA
+        <span
+          class='bg-gradient-to-r from-brand to-brand-secondary bg-clip-text font-extrabold text-transparent'
+        >
+          MUZYCE
+        </span></span
       >
-        MUZYCE
-      </span>
     </h1>
     <h2 class='space-x-1 text-left text-2xl md:text-4xl'>
       <span class='text-brand'>*</span>
