:sparkles: links under buttons

--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -18,7 +18,7 @@ import Button from './button.astro';
     <div class='flex space-x-8'>
       <Button
         styling='hidden lg:block'
-        href='#'
+        href='https://linktr.ee/manage.band/'
         label='Poznajmy się'
         variant='outline'
       />
